navbar links updated

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
        <!-- MENU LINKS -->
        <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav" id="navigation">
-            <li><a href="#about">About</a></li>
             <li><a href="#service">Service</a></li>
-            <li><a href="#price">Price</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#process">Process</a></li>
             <li><a href="#facts">Facts</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
