--- a/index.html
+++ b/index.html
@@ -75,16 +75,15 @@
 
 <!-- NAVBAR END -->
   
-<!-- SEQUENCE SLIDER Change Styles at the sequence-slider.css file --> 
-
-<div id="top-slider">
+<!-- top-section (Logo + name + tagline) --> 
+<div id="top-section">
    <div class="container">
        <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive logo" src="img/roro_logo.png" alt="">
+                <img class="img-responsive logo" src="img/roro_logo_light.png" alt="">
                 <div class="intro-text">
-                    <h1>RORO</h1>
-                    <h4>We Role On Role Off your ideas</h4>
+                    <div class="roro-header">roro</div>
+                    <div class="roro-tagline">We Role On Role Off your ideas ahead</div>
                 </div>
             </div>
         </div>
