Going up arrow anchor updated

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 <!-- GOING UP ARROW -->
 
 <div class="col-lg-12">
-  <div class="up"><a href="#about"><span class="glyphicon glyphicon-chevron-up"></span></a></div>
+  <div class="up"><a href="#top-section"><span class="glyphicon glyphicon-chevron-up"></span></a></div>
 </div>
 
 <!-- GOING UP ARROW END -->
