Top-section: Parallex effect restored

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- Font Awesome Icons css -->
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
     
+    <!-- BxSlider and Sequence Slider css -->
+    <link rel="stylesheet" media="screen" href="./css/sequence-slider.css" />
+      
     <!-- Magnific Popup core CSS file -->
     <link rel="stylesheet" href="./css/magnific-popup.css"> 
 
@@ -76,8 +79,8 @@
 <!-- NAVBAR END -->
   
 <!-- top-section (Logo + name + tagline) --> 
-<div id="top-section">
-   <div class="container">
+<div id="top-slider">
+   <div id="sequence">
        <div class="row">
             <div class="col-lg-12">
                 <img class="img-responsive logo" src="img/roro_logo_light.png" alt="">
