--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation" id="menu">
     <div class="container">
+        <ul class="nav navbar-roro" id="roro-logo-text">
+            <li>roro</li>
+        </ul>
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -83,7 +86,7 @@
    <div id="sequence">
        <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive logo" src="img/roro_logo_light.png" alt="">
+                <img class="img-responsive logo" src="img/roro_logo.png" alt="">
                 <div class="intro-text">
                     <div class="roro-header">roro</div>
                     <div class="roro-tagline">We Role On Role Off your ideas ahead</div>
