--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             <div class="col-lg-12">
                 <img class="img-responsive logo" src="img/roro_logo.png" alt="">
                 <div class="intro-text">
-                    <div class="roro-header">roro</div>
-                    <div class="roro-tagline">We Role On Role Off your ideas ahead</div>
+<!--                    <div class="roro-header">roro</div>-->
+                    <div class="roro-tagline">Roll On and Roll Off your ideas ahead</div>
                 </div>
             </div>
         </div>
