about us section updated

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 	            <li><span class="skillbar ux"></span><p>Business Definiiton/User Experience(UX)</p></li>
 
-	            <li><span class="skillbar ui"></span><p>User Interface(UI) Sketch/Photoshop</p></li>
+	            <li><span class="skillbar ui"></span><p>User Interface(UI) Sketch &amp; Photoshop</p></li>
             </ul>
          
         </div>
