--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>RORO</title>
+    <title>roro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="RORO">
+    <meta name="description" content="roro">
     <meta name="author" content="rorohiko">
 
     <!-- google web fonts -->
