minor copy changes

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <img id="zoom-img" src="./img/whatWeDo/graphicdesign.png" alt="">
                     </div>
                     <h4>UX / UI</h4>
-                    <p>With the number of mobile &amp; web applications growing exponentially today, a rich and enriching User Experience is the differentiation and justification for any product. We strive to get the right balance in the user experience for various types of user personas. We are constantly learning and adapting to the emerging trends in the user experience space. We are passionate about creating beautiful apps. We use Bohemian Sketch for designing and InVision to roll-out prototypes</p>
+                    <p>With the number of mobile &amp; web applications growing exponentially today, an enriching User Experience is the differentiation and justification for any product. We strive to get the right balance in UX/UI for various types of user personas. We are constantly learning and adapting to the emerging trends in the user experience space. We use Bohemian Sketch for designing and InVision to roll-out prototypes.</p>
                 </div>
             </div>
         
@@ -176,7 +176,7 @@
 
                     <li><span class="skillbar ios"></span><p>iOS</p></li>
 
-                    <li><span class="skillbar node"></span><p>Node JS</p></li>
+                    <li><span class="skillbar node"></span><p>Node.js</p></li>
 
                     <li><span class="skillbar ux"></span><p>Business Definiiton/User Experience(UX)</p></li>
 
