--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                     <li><span class="skillbar node"></span><p>Node.js</p></li>
 
-                    <li><span class="skillbar ux"></span><p>Business Definiiton/User Experience(UX)</p></li>
+                    <li><span class="skillbar ux"></span><p>Business Analysis/User Experience(UX)</p></li>
 
                     <li><span class="skillbar ui"></span><p>User Interface(UI) Sketch &amp; Photoshop</p></li>
                 </ul>
