Process: animation upgraded

--- a/index.html
+++ b/index.html
@@ -206,22 +206,22 @@
             <div class="our-process">
                 <div class="process">
                     <div class="col-lg-4 process-con img1">
-                        <div class="process-img rotate zoom-process">
-                            <img id="zoom-img-process" src="./img/howWeDo/idea.png" alt=""> 
+                        <div id="zoom-process" class="process-img rotate">
+                            <img id="zoom-image-process" src="./img/howWeDo/idea.png" alt=""> 
                         </div>
                         <h5>Analyze the Idea</h5>
                     </div>
                 
                     <div class="col-lg-4 process-con img2">
-                        <div class="process-img rotate zoom-process">
-                            <img id="zoom-img-process" src="./img/howWeDo/creation.png" alt="">  
+                        <div id="zoom-process" class="process-img rotate">
+                            <img id="zoom-image-process" src="./img/howWeDo/creation.png" alt="">  
                         </div>
                         <h5>Architect and Design</h5>
                     </div>
                
                     <div class="col-lg-4 process-con img3">
-                        <div class="process-img rotate zoom-process">
-                            <img id="zoom-img-process" src="./img/howWeDo/development.png" alt="">   
+                        <div id="zoom-process" class="process-img rotate">
+                            <img id="zoom-image-process" src="./img/howWeDo/development.png" alt="">   
                         </div>
                         <h5>Develop and Test</h5>
                     </div> 
