--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <div class="col-lg-12 col-md-12 col-xs-12">
                     <h1>Get in Touch</h1>
                     <hr class="head-border-grey">
-                    <p class="center h4 contact-us-text">Webrat chewed our phone cables, so please drop us an email at <a target="_top" href="mailto:sales@roro.io">sales@roro.io</a></p>
+                    <p class="center h4 contact-us-text">Webrat chewed our phone cables, so please drop us an email at <a target="_top" href="mailto:sales@roro.io">info@roro.io</a></p>
                     
                     <p class="center h4">We would love to hear from you if you want to discuss a project, give us some feedback, or just fill our inbox with mails.</p> 
                 </div>
