fun fact link removed from nav bar

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <li><a href="#service">Service</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#process">Process</a></li>
-                <li><a href="#facts">Facts</a></li>
+<!--                <li><a href="#facts">Facts</a></li>-->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
