--- a/index.html
+++ b/index.html
@@ -296,10 +296,9 @@
                 <div class="col-lg-12 col-md-12 col-xs-12">
                     <h1>Get in Touch</h1>
                     <hr class="head-border-grey">
-                    <p class="center h4 contact-us-subheader">Webrat chewed our phone cables, so please drop us an email at</p> 
+                    <p class="center contact-us-closing-line">Explore the unique combination of technology, innovation and content expertise to create your success story! We would love to hear from you if you want to discuss a project, give us some feedback, or just fill our inbox with mails.</p> 
+                    <p class="center contact-us-subheader">Webrat chewed our phone cables, so please drop us an email at</p> 
                     <p class="center h4"><a class=" contact-us-email" target="_top" href="mailto:sales@roro.io">info@roro.io</a></p>
-                    
-                    <p class="center h4 contact-us-closing-line">We would love to hear from you if you want to discuss a project, give us some feedback, or just fill our inbox with mails.</p> 
                 </div>
             </div>
         </div>
