--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <img class="img-responsive logo" src="img/roro_logo.png" alt="">
                 <div class="intro-text">
 <!--                    <div class="roro-header">roro</div>-->
-                    <div class="roro-tagline">Roll On and Roll Off your ideas ahead</div>
+                    <div class="roro-tagline">We Roll On and Roll Off your ideas ahead</div>
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
                 <div class="col-lg-12 col-md-12 col-xs-12">
                     <h1>What We Do</h1>
                     <hr class="head-border-white">
-                    <p class="subhead">We provide fullstack solution for developing mobile applications</p>
+                    <p class="subhead">We help grow great brands</p>
                 </div>
             </div>
       
@@ -199,7 +199,7 @@
                 <div class="col-lg-12 col-md-12 col-xs-12">
                     <h1>How We Do</h1>
                     <hr class="head-border-white">
-                    <p class="subhead center">Our three step process goes like this..</p>
+                    <p class="subhead center">The heart of our business model is to excel in software technologies and empower innovation, optimization and growth for our clients. We follow agile methodology and use cutting-edge technologies with a hard-line focus on delivery. Our three step process goes like this..</p>
                 </div>
             </div>
       
@@ -325,7 +325,7 @@
                 <div class="social-icons">
                     <a class="social-media facebook" href="https://facebook.com/Roro-230436027335855/"><i class="fa fa-facebook-square fa-8x"></i></a>
                     <a class="social-media white twitter" href="https://twitter.com/the_r0r0"><i class="fa fa-twitter-square fa-8x"></i></a>
-                    <a class="social-media white google" href=""><i class="fa fa-google-plus-square fa-8x"></i></a>
+                    <a class="social-media white google" href="https://plus.google.com/111106081197635048512"><i class="fa fa-google-plus-square fa-8x"></i></a>
                 </div>  
             </div>
         </div>
