social medial links now opening in new tab and mail us linking updated to info@roro.io

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     <hr class="head-border-grey">
                     <p class="center contact-us-closing-line">Explore the unique combination of technology, innovation and content expertise to create your success story! We would love to hear from you if you want to discuss a project, give us some feedback, or just fill our inbox with mails.</p> 
                     <p class="center contact-us-subheader">Webrat chewed our phone cables, so please drop us an email at</p> 
-                    <p class="center h4"><a class=" contact-us-email" target="_top" href="mailto:sales@roro.io">info@roro.io</a></p>
+                    <p class="center h4"><a class=" contact-us-email" target="_top" href="mailto:info@roro.io">info@roro.io</a></p>
                 </div>
             </div>
         </div>
@@ -323,9 +323,9 @@
         <div class="row">
             <div class="col-12-lg social-media">
                 <div class="social-icons">
-                    <a class="social-media facebook" href="https://facebook.com/Roro-230436027335855/"><i class="fa fa-facebook-square fa-8x"></i></a>
-                    <a class="social-media white twitter" href="https://twitter.com/the_r0r0"><i class="fa fa-twitter-square fa-8x"></i></a>
-                    <a class="social-media white google" href="https://plus.google.com/111106081197635048512"><i class="fa fa-google-plus-square fa-8x"></i></a>
+                    <a class="social-media facebook" href="https://facebook.com/Roro-230436027335855/" target="_blank"><i class="fa fa-facebook-square fa-8x"></i></a>
+                    <a class="social-media white twitter" href="https://twitter.com/the_r0r0" target="_blank"><i class="fa fa-twitter-square fa-8x"></i></a>
+                    <a class="social-media white google" href="https://plus.google.com/111106081197635048512" target="_blank"><i class="fa fa-google-plus-square fa-8x"></i></a>
                 </div>  
             </div>
         </div>
