--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="col-lg-12 col-md-12 col-xs-12">
                     <h1>What We Do</h1>
                     <hr class="head-border-white">
-                    <p class="subhead">We help grow great brands</p>
+                    <p class="subhead">We provide fullstack solution for developing mobile applications</p>
                 </div>
             </div>
       
