Android/iOS, UX/UI and backend text changed

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <img id="zoom-img" src="./img/whatWeDo/mobile.png" alt="">
                     </div>
                     <h4>Android / iOS</h4>
-                    <p>Having spent significant time on Android and iOS, we don’t just develop mobile applications, but know these platforms inside-out. We are here to transform your ideas into apps.</p>
+                    <p>We aim to change how the world experiences mobile by creating apps that combine world class user experiences. Specializing in iOS and Android applications, we handcraft and customize every interaction from the ground up and optimize our apps specific to the platform paradigm.</p>
                 </div>
             </div>
         
@@ -141,7 +141,7 @@
                         <img id="zoom-img" src="./img/whatWeDo/graphicdesign.png" alt="">
                     </div>
                     <h4>UX / UI</h4>
-                    <p>A successful app needs a great user experience. We are passionate about creating beautiful apps. We use Bohemian Sketch for designing and InVision to roll-out prototypes.</p>
+                    <p>With the number of mobile & web applications growing exponentially today, an enriching User Experience is the differentiation and justification for any product. We are constantly learning and adapting to the emerging trends in the user experience space.</p>
                 </div>
             </div>
         
@@ -152,7 +152,7 @@
                         <img id="zoom-img" src="./img/whatWeDo/server.png" alt="">
                     </div>
                     <h4>Backend</h4>
-                    <p>Usability of an app depends on quality and availability of data. We empower your app with an efficient backend that we create over a Nodejs and Mongodb stack.</p>
+                    <p>For any product to be successful and huge, its imperative that the technology is robust, scalable, secure and highly reliable. We are always focussed on designing a server side solution fully tailored to the unique needs of the product.</p>
                 </div>
             </div>
         </div>
