--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <div class="row">
             <div class="center-block head">
                 <div class="col-lg-12 col-md-12 col-xs-12">
-                    <h1>Get in Touch</h1>
+                    <h1 class="contact-us-header-text">Get in Touch</h1>
                     <hr class="head-border-grey">
                     <p class="center contact-us-closing-line">Explore the unique combination of technology, innovation and content expertise to create your success story! We would love to hear from you if you want to discuss a project, give us some feedback, or just fill our inbox with mails.</p> 
                     <p class="center contact-us-subheader">Webrat chewed our phone cables, so please drop us an email at</p> 
