--- a/index.html
+++ b/index.html
@@ -95,16 +95,18 @@
   
 <!-- top-section (Logo + name + tagline) --> 
 <div id="top-slider">
-   <div id="sequence">
-       <div class="row">
+    <div class="slider-bg"></div>
+    <div id="sequence">
+<!--
+        <div class="row">
             <div class="col-lg-12">
                 <img class="img-responsive logo" src="img/roro_logo.png" alt="">
                 <div class="intro-text">
-<!--                    <div class="roro-header">roro</div>-->
                     <div class="roro-tagline">We Roll On and Roll Off your ideas ahead</div>
                 </div>
             </div>
         </div>
+-->
     </div>
 </div>
 
