top section scrolling improved

--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
   
 <!-- top-section (Logo + name + tagline) --> 
 <div id="top-slider">
-    <div class="slider-bg"></div>
-    <div id="sequence">
-<!--
+    <div class="slider-bg">
+<!--        <img class="image" src="img/top_section_bg.jpg"/>-->
+    </div>
+        
+<!--    <div id="sequence">-->
         <div class="row">
             <div class="col-lg-12">
                 <img class="img-responsive logo" src="img/roro_logo.png" alt="">
@@ -106,9 +108,8 @@
                 </div>
             </div>
         </div>
--->
     </div>
-</div>
+<!--</div>-->
 
 <!-- SEQUENCE SLIDER END -->
      
