top section: textual content added

--- a/index.html
+++ b/index.html
@@ -96,9 +96,16 @@
 <!-- top-section (Logo + name + tagline) --> 
 <div id="top-slider">
     <div class="slider-bg">
-        <div class="center-block head">
-            <div class="col-lg-7 col-md-7">
-                <h1>What We Do</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7 col-md-7 col-xs-12">
+                    <div class="vertical-center">
+                        <li class="animate-in">
+                            <h2 class="title">roro</h2>
+                            <h3 class="subtitle">#code<br>#apps.build()<br>#loop</h3>
+                        </li>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
