space increased between tagline and logo

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="vertical-center">
                         <li class="animate-in">
                             <h2 class="title">roro</h2>
-                            <h3 class="subtitle">#code<br>#apps.build()<br>#loop</h3>
+                            <h3 class="subtitle"><br>#code<br>#apps.build()<br>#loop</h3>
                         </li>
                     </div>
                 </div>
