handling top section content padding programmatically

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-md-7 col-xs-12">
-                    <div class="vertical-center">
+                    <div id="vertical-center">
                         <li class="animate-in">
                             <h2 class="title">roro</h2>
                             <h3 class="subtitle"><br>#code<br>#apps.build()<br>#loop</h3>
