--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- MENU LINKS -->
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav" id="navigation">
-                <li><a href="#service">Service</a></li>
+                <li><a href="#service">Services</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#process">Process</a></li>
 <!--                <li><a href="#facts">Facts</a></li>-->
